# kipi-plugins

./: .directory  CMakeLists.txt  NEWS
common/libkipiplugins/: CMakeLists.txt
common/libkipiplugins/tools/: kpimageinfo.h  kpqmlplugin.cpp  kpqmlplugin.h  kpquickimageinfo.cpp  kpquickimageinfo.h  kpquickinit.cpp  kpquickinterface.h  qmldir
dngconverter/: CMakeLists.txt
dngconverter/plugin/: actionthread.cpp  actionthread.h  plugin_dngconverter.cpp  plugin_dngconverter.h  plugin_gettask.cpp  plugin_gettask.h  plugin_getwidget.cpp  plugin_getwidget.h  settingswidget.cpp  settingswidget.h
dropbox/: CMakeLists.txt  dbalbum.cpp  dbalbum.h  dbitem.h  dbtalker.cpp  dbtalker.h  dbwidget.cpp  dbwidget.h  dbwindow.cpp  dbwindow.h  kipiplugin_dropbox.desktop.cmake  kipiplugin_dropboxui.rc  mpform.cpp  mpform.h  plugin_dropbox.cpp  plugin_dropbox.h
expoblending/: CMakeLists.txt
expoblending/blendingdlg/: expoblendingdlg.cpp
expoblending/hdrdlg/: hdrimagedlg.cpp
expoblending/importwizard/: importwizarddlg.cpp  itemspage.cpp  preprocessingpage.cpp
expoblending/manager/: actions.h  actionthread.cpp  actionthread.h  manager.cpp  manager.h  pfsbinary.cpp  pfsbinary.h
expoblending/plugin/: expoblending.desktop
expoblending/tasks/: cameraresponsetask.cpp  cameraresponsetask.h  enfusepreviewtask.cpp  generictask.cpp  generictask.h  hdrgentask.cpp  hdrgentask.h  preprocesstask.cpp  preprocesstask.h  task.cpp  task.h  tasks.h
facebook/: CMakeLists.txt
flickr/: CMakeLists.txt
flickrexport/: flickrlist.cpp
googledrive/: CMakeLists.txt  gdalbum.cpp  gdalbum.h  gditem.h  gdtalker.cpp  gdtalker.h  gdwidget.cpp  gdwidget.h  gdwindow.cpp  gdwindow.h  kipiplugin_googledrive.desktop.cmake  kipiplugin_googledriveui.rc  mpform.cpp  mpform.h  plugin_googledrive.cpp  plugin_googledrive.h
googleservices/: CMakeLists.txt
gpssync/: plugin_gpssync.cpp
imageshack/: CMakeLists.txt
imgur/: CMakeLists.txt
kioexportimport/: plugin_kioexportimport.cpp  plugin_kioexportimport.h
metadataedit/: CMakeLists.txt
metadataedit/xmp/: xmpaudiospecs.cpp  xmpaudiospecs.h  xmpeditwidget.cpp  xmpvideospecs.cpp  xmpvideospecs.h
photivoexport/: CMakeLists.txt  README  TODO
photivoexport/plugin/: kipiplugin_photivoexport.desktop.cmake  kipiplugin_photivoexportui.rc  kipiplugin_photivotoolui.rc  plugin_photivoexport.cpp  plugin_photivotool.cpp  plugin_photivotool.h
photivotool/: CMakeLists.txt  Messages.sh  README  TODO
photivotool/plugin/: kipiplugin_photivotool.desktop.cmake  kipiplugin_photivotoolui.rc  plugin_photivotool.cpp  plugin_photivotool.h
piwigo/: CMakeLists.txt
printimages/: CMakeLists.txt
rajce/: CMakeLists.txt
remotestorage/: CMakeLists.txt
smug/: CMakeLists.txt
tests/qmlimageviewer/: qmlimageviewer.cpp  qmlimageviewer_plugin.cpp
tests/qmlimageviewer/data/: CMakeLists.txt  ImageCollectionModelView.qml  ImageCollectionView.qml  ObjectIntrospection.qml  ObjectIntrospectionDelegate.qml
yandexfotki/: CMakeLists.txt
